--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,8 @@
 *.userosscache
 *.sln.docstates
 *.vcxproj
-*.vcxproj.filters
-*.vcxproj.user
+*.filters
+*.user
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
